[package]
name = "woody"
version = "0.1.1"
edition = "2021"
authors = ["Travis Aaron Wagner <dev@travisaw.com>"]
license = "MIT"
description = "A logger for Rust that's *actually* easy to use."
readme = "README.md"
keywords = ["log", "logger", "logging", "wood"]
repository = "https://github.com/trvswgnr/woody"

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.38"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt"] }
serial_test = "3.1.0"
